dataset1235/2025-2/2868285114/users/1527706029/executions/3649835072_2819779400.log
== SUBMISSION (2025-08-19 22:54:08)
-- CODE: 
quan = int(input())
valoruni = float(input())
frete = float(input())
total = (quan*valoruni)+frete
print (total)total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 5
    print (total)total)
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 5
    print (total)total)
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 5
    print (total)total)
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 5
    print (total)total)
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 5
    print (total)total)
                      ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 5
    print (total)total)
                      ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:54:22)
-- CODE: 
quan = int(input())
valoruni = float(input())
frete = float(input())
total = (quan*valoruni)+frete
print (total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:52:19)
-- CODE: 
quan = int(input())
valoruni = float(input())
frete = float(input())
total = (quan*valoruni)+frete
print (round(total))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
1642
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
540
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
163
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:53:16)
-- CODE: 
quan = int(input())
valoruni = float(input())
frete = float(input())
total = (quan*valoruni)+frete
print (round(total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
